Adds crafting recipies and a new item

--- a/src/main/resources/assets/power_mod/lang/en_us.json
+++ b/src/main/resources/assets/power_mod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.power_mod.solar_pane": "Solar Pane",
   "itemGroup.tabpower_mod": "Power Mod",
-  "block.power_mod.solar_panel": "Solar Panel",
+  "block.power_mod.solar_panel": "Basic Solar Panel",
+  "item.power_mod.basic_componet": "Basic Componet",
   "block.power_mod.energy_cell_basic": "Energy Cell Basic"
 }
