--- a/src/main/resources/assets/power_mod/lang/en_us.json
+++ b/src/main/resources/assets/power_mod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.power_mod.energy_meter": "Energy Meter",
   "item.power_mod.solar_pane": "Solar Pane",
   "itemGroup.tabpower_mod": "Power Mod",
   "block.power_mod.solar_panel": "Basic Solar Panel",
